--- a/templates/base.html
+++ b/templates/base.html
@@ -1,175 +1,291 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> {% block title %}{% endblock title %} </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-     <!-- Add your CSS and other head elements here -->
-     <style>
-        /* Define a CSS class for cursor: pointer */
-        .pointer-link {
-            cursor: pointer;
-        }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% block title %}{% endblock title %}</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <!-- Add your CSS and other head elements here -->
+    <style>
+      .pointer-link {
+        cursor: pointer;
+      }
+
+      body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+
+      .content {
+        flex: 1;
+        /* Add any additional styling for your content container */
+        padding-bottom: 5rem; /* Adjust as needed to provide space for the footer */
+      }
+
+      .footer {
+        flex-shrink: 0;
+        padding: 1rem;
+        background-color: #f8f9fa;
+        text-align: center;
+        width: 100%;
+        box-sizing: border-box;
+        position: sticky;
+        bottom: 0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-transparent">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto ">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Hospitals</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">About Us</a>
-                    </li>
-                    {% if user.role == "reception" %}
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showReceptionSection('new-patient')">New Patient</a>
-                    </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showReceptionSection('existing-patient')">Existing Patient</a>
-                    </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showReceptionSection('appointments')">Appointments</a>
-                    </li>
-                    {% endif %}
-                    {% if user.role == "doctor" %}
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('predictive-model')">AI-ML</a>
-                    </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('speech-to-text')">Speech-To-Text</a>
-                    </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('ocr')">Text Scanner</a>
-                    </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('disease-form')">Form</a>
-                    </li>
-                    {% endif %}
-                    {% if user.role == "staff" %}
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showStaffSection('employee')">Employee</a>
-                    </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showStaffSection('equipment')">Equipment</a>
-                    </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showStaffSection('operation-room')">Operation Room</a>
-                    </li>
-                    {% endif %}
-                    {% if user.role == "patient" %}
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showPatientSection('case-history')">History</a>
-                    </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showPatientSection('book-appointment')">Appointment Booking</a>
-                    </li>
-                    {% endif %}
-                    {% if user.login %}
-                    <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Log Out</a>
-                    </li>
-                    {% endif %}
-                </ul>
-                <form class="d-flex mx-auto">
-                    <a class="btn btn-primary ms-5 me-2 rounded-pill fw-bold" type="submit" href="/login">Log in</a>
-                    <a class="btn btn-primary me-0 rounded-pill fw-bold" type="submit" href="/register">Sign in</a>
-                </form>
-            </div>
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="{{ url_for('home_page') }}"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="{{ url_for('home_page') }}"
+                >Hospitals</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="{{ url_for('home_page') }}"
+                >About Us</a
+              >
+            </li>
+            {% if user.role == "reception" %}
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showReceptionSection('new-patient')"
+                >New Patient</a
+              >
+            </li>
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showReceptionSection('existing-patient')"
+                >Existing Patient</a
+              >
+            </li>
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showReceptionSection('appointments')"
+                >Appointments</a
+              >
+            </li>
+            {% endif %} {% if user.role == "doctor" %}
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showDoctorSection('predictive-model')"
+                >AI-ML</a
+              >
+            </li>
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showDoctorSection('speech-to-text')"
+                >Speech-To-Text</a
+              >
+            </li>
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showDoctorSection('ocr')"
+                >Text Scanner</a
+              >
+            </li>
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showDoctorSection('disease-form')"
+                >Form</a
+              >
+            </li>
+            {% endif %} {% if user.role == "staff" %}
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showStaffSection('employee')"
+                >Employee</a
+              >
+            </li>
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showStaffSection('equipment')"
+                >Equipment</a
+              >
+            </li>
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showStaffSection('operation-room')"
+                >Operation Room</a
+              >
+            </li>
+            {% endif %} {% if user.role == "patient" %}
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showPatientSection('case-history')"
+                >History</a
+              >
+            </li>
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                onclick="showPatientSection('book-appointment')"
+                >Appointment Booking</a
+              >
+            </li>
+            {% endif %} {% if user.login %}
+            <li class="nav-item" style="cursor: pointer">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="{{ url_for('home_page') }}"
+                >Log Out</a
+              >
+            </li>
+            {% endif %}
+          </ul>
+          <form class="d-flex mx-auto">
+            <a
+              class="btn btn-primary ms-5 me-2 rounded-pill fw-bold"
+              type="submit"
+              href="/login"
+              >Log in</a
+            >
+            <a
+              class="btn btn-primary me-0 rounded-pill fw-bold"
+              type="submit"
+              href="/register"
+              >Sign in</a
+            >
+          </form>
         </div>
+      </div>
     </nav>
 
-    
     <!-- body -->
-    {% block body %}
-    
-    {% endblock body %}
-
+    {% block body %} {% endblock body %}
 
     <!-- Footer -->
-    
-    <div class="d-flex flex-column flex-sm-row justify-content-between p-4 mt-4 border-top">
-        <p>&copy; 2023 Adani University</p>
-        <h6>Designed by OxAI</h6>
-        </div>
-    </footer>
+    <div class="footer">
+      <p>&copy; 2023 Adani University</p>
+      <h6>Designed by OxAI</h6>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Include jQuery for easier DOM manipulation -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- JavaScript for showing/hiding sections -->
     <script>
-        function showReceptionSection(sectionId) {
-            // Hide all sections
-            $('#new-patient, #existing-patient, #appointments').hide();
-            
-            // Show the selected section
-            $('#' + sectionId).show();
-        }
-        function showDoctorSection(sectionId) {
-            // Hide all sections
-            $('#predictive-model, #speech-to-text, #ocr, #disease-form').hide();
-            
-            // Show the selected section
-            $('#' + sectionId).show();
-        }
-        function showStaffSection(sectionId) {
-            // Hide all sections
-            $('#employee, #equipment, #operation-room').hide();
-            
-            // Show the selected section
-            $('#' + sectionId).show();
-        }
-        function showPatientSection(sectionId) {
-            // Hide all sections
-            $('#case-history, #book-appointment').hide();
-            
-            // Show the selected section
-            $('#' + sectionId).show();
-        }
-
+      function showReceptionSection(sectionId) {
         // Hide all sections
-        $('#new-patient, #existing-patient, #appointments').hide();
-        $('#predictive-model, #speech-to-text, #ocr, #disease-form').hide();
-        $('#employee, #equipment, #operation-room').hide();
-        $('#case-history, #book-appointment').hide();
+        $("#new-patient, #existing-patient, #appointments").hide();
 
         // Show the selected section
-        // if(user.role == "reception") {
-        //     $('#new-patient').show();
-        // }
-        // if(user.role == "doctor") {
-        //     $('#predictive-model').show();
-        // }
-        // if(user.role != "staff") {
-        //     $('#employee').show();
-        // }
-        // if(user.role == "patient") {
-        //     $('#case-history').show();
-        // }
+        $("#" + sectionId).show();
+      }
+      function showDoctorSection(sectionId) {
+        // Hide all sections
+        $("#predictive-model, #speech-to-text, #ocr, #disease-form").hide();
 
-        // $('#new-patient').show();
-        // $('#predictive-model').show();
-        // $('#employee').show();
-        // $('#case-history').show();
+        // Show the selected section
+        $("#" + sectionId).show();
+      }
+      function showStaffSection(sectionId) {
+        // Hide all sections
+        $("#employee, #equipment, #operation-room").hide();
 
+        // Show the selected section
+        $("#" + sectionId).show();
+      }
+      function showPatientSection(sectionId) {
+        // Hide all sections
+        $("#case-history, #book-appointment").hide();
+
+        // Show the selected section
+        $("#" + sectionId).show();
+      }
+
+      // Hide all sections
+      $("#new-patient, #existing-patient, #appointments").hide();
+      $("#predictive-model, #speech-to-text, #ocr, #disease-form").hide();
+      $("#employee, #equipment, #operation-room").hide();
+      $("#case-history, #book-appointment").hide();
+
+      // Show the selected section
+      // if(user.role == "reception") {
+      //     $('#new-patient').show();
+      // }
+      // if(user.role == "doctor") {
+      //     $('#predictive-model').show();
+      // }
+      // if(user.role != "staff") {
+      //     $('#employee').show();
+      // }
+      // if(user.role == "patient") {
+      //     $('#case-history').show();
+      // }
+
+      // $('#new-patient').show();
+      // $('#predictive-model').show();
+      // $('#employee').show();
+      // $('#case-history').show();
     </script>
 
     {% block scripts %}{% endblock scripts %}
-</body>
+  </body>
 </html>
