Index html changed, minor change in base

--- a/templates/base.html
+++ b/templates/base.html
@@ -217,7 +217,7 @@
 
     <!-- Footer -->
     <div class="footer">
-      <p>&copy; 2023 Adani University</p>
+      <p>&copy; 2023 HMIS</p>
       <h6>Designed by OxAI</h6>
     </div>
     <script
