--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <div class="col-lg-8 col-md-10 mb-5 mx-auto ">
-    <h2 >Sign In </h2>
+    <h2 >Log In</h2>
     {{ wtf.quick_form(login_form, novalidate=True, button_map={"submit": "primary"}) }}
     <p class="d-flex justify-content-center mt-1">Yet to Register?&nbsp;&nbsp;<a href="{{ url_for('register_page') }}"> Sign Up</a></p>
   
