--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 {% block body %}
 
 <div class="col-lg-8 col-md-10 mb-5 mx-auto ">
-    <h2 >Sign In </h2>
+    <h2 >Sign Up</h2>
     {{ wtf.quick_form(register_form, novalidate=True, button_map={"submit": "primary"}) }}
     <p class="d-flex justify-content-center mt-1">Already Registered?&nbsp;&nbsp;<a href="{{ url_for('login_page') }}"> Sign In</a></p>
   
