--- a/templates/base.html
+++ b/templates/base.html
@@ -72,15 +72,22 @@
                     </li>
                     {% endif %}
                     {% if user.login %}
-                    <li class="nav-item">
+                    <li clss="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Log Out</a>
-                    </li>
+                    </li>a
                     {% endif %}
                 </ul>
+                {% if not user.is_active %}
                 <form class="d-flex mx-auto">
-                    <a class="btn btn-primary ms-5 me-2 rounded-pill fw-bold" type="submit" href="/login">Log in</a>
-                    <a class="btn btn-primary me-0 rounded-pill fw-bold" type="submit" href="/register">Sign in</a>
+                    <a class="btn btn-primary ms-5 me-2 rounded-pill fw-bold" type="submit" href="{{ url_for('login_page') }}">Log in</a>
+                    <a class="btn btn-primary me-0 rounded-pill fw-bold" type="submit" href="{{ url_for('register_page') }}">Sign up</a>
                 </form>
+                {% endif %}
+                {% if user.is_active %}
+                <form class="d-flex mx-auto">
+                    <a class="btn btn-primary ms-5 me-2 rounded-pill fw-bold" type="submit" href="{{ url_for('home_page') }}">Log Out</a>
+                </form>
+                {% endif %}
             </div>
         </div>
     </nav>
