--- a/templates/patient.html
+++ b/templates/patient.html
@@ -5,21 +5,27 @@
 
 {% block body %}
 <div id="case-history">
-    {% for case in cases %}
     <div class="container">
         <div class="card" style="width: 18rem">
           <div class="card-body">
-              <h5 class="card-title"><img src="..." class="card-img-top" alt="..." />Patient Name</h5>
+              <h5 class="card-title"><img src="..." class="card-img-top" alt="..." />Dev Sanghvi</h5>
             <p class="card-text">
-                Case Details
+                Covid-19
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
-      {% endfor %}
 </div>
 <div id="book-appointment">
-    <p>Book appointment</p>
+  <div class="container">
+    <div class="card" style="width: 18rem">
+      <div class="card-body">
+          <h5 class="card-title"><img src="..." class="card-img-top" alt="..." />Dev Sanghvi</h5>
+        <p class="card-text">
+            <b>Time Slot:</b> 11:15 A.M.
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock body %}
