--- a/templates/reception.html
+++ b/templates/reception.html
@@ -5,7 +5,16 @@
 
 {% block body %}
 <div id="new-patient">
-    <p>New patient</p>
+    <div class="container">
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title"><img src="..." class="card-img-top" alt="..." />Calpol</h5>
+            <p class="card-text">
+                It is an analgesic and antipyretic drug that is used to temporarily relieve mild-to-moderate pain and fever. It is commonly included as an ingredient in cold and flu medications and is also used on its own.
+            </p>
+          </div>
+        </div>
+      </div>
 </div>
 <div id="existing-patient">
     <p>Existing patients</p>
