--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,7 @@
 
       .content {
         flex: 1;
-        /* Add any additional styling for your content container */
-        padding-bottom: 5rem; /* Adjust as needed to provide space for the footer */
+        padding: 1rem; /* Add padding as needed */
       }
 
       .footer {
@@ -37,8 +36,6 @@
         text-align: center;
         width: 100%;
         box-sizing: border-box;
-        position: sticky;
-        bottom: 0;
       }
     </style>
   </head>
