--- a/templates/register.html
+++ b/templates/register.html
@@ -51,7 +51,7 @@
 
 <div class="col-lg-8 col-md-10 mb-5 mx-auto sign-in-box">
     <div class="sign-in-title">
-        <h2 >Sign In </h2>
+        <h2 >Sign Up</h2>
     </div>
 
     {{ wtf.quick_form(register_form, novalidate=True, button_map={"submit": "primary"}) }}
