--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto ">
+                    {% if user.role == "" %}
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Home</a>
+                      <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Hospitals</a>
@@ -59,6 +60,7 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">About Us</a>
                     </li>
+                    {% endif %}
                     {% if user.role == "reception" %}
                     <li class="nav-item" style="cursor: pointer;">
                         <a class="nav-link" aria-current="page" onclick="showReceptionSection('new-patient')">New Patient</a>
