--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                     {% endif %}
                     {% if user.role == "doctor" %}
                     <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('predictive-model')">AI-ML</a>
+                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('predictive-model')" href="{{ url_for('disease_prediction') }}">AI-ML</a>
                     </li>
                     <li class="nav-item" style="cursor: pointer;">
                         <a class="nav-link" aria-current="page" onclick="showDoctorSection('speech-to-text')">Speech-To-Text</a>
