--- a/templates/base.html
+++ b/templates/base.html
@@ -77,10 +77,10 @@
                         <a class="nav-link" aria-current="page" onclick="showDoctorSection('predictive-model')" href="{{ url_for('disease_prediction') }}">AI-ML</a>
                     </li>
                     <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('speech-to-text')">Speech-To-Text</a>
+                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('speech-to-text')" >Speech-To-Text</a>
                     </li>
                     <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('ocr')">Text Scanner</a>
+                        <a class="nav-link" aria-current="page" onclick="showDoctorSection('ocr')" href="{{url_for('camera_page')}}">Text Scanner</a>
                     </li>
                     <li class="nav-item" style="cursor: pointer;">
                         <a class="nav-link" aria-current="page" onclick="showDoctorSection('disease-form')">Form</a>
